<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Select Model Label -->
        <TextView
            android:id="@+id/modelSelectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_model"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!-- Model Spinner -->
        <Spinner
            android:id="@+id/modelSpinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/modelSelectionLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/refreshButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <!-- Model Refresh Button -->
        <ImageButton
            android:id="@+id/refreshButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_popup_sync"
            android:contentDescription="@string/model_refresh"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/modelSpinner"
            app:layout_constraintBottom_toBottomOf="@id/modelSpinner"
            app:tint="@android:color/black" />

        <!-- Model Memory Usage -->
        <TextView
            android:id="@+id/modelMemoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_usage"
            app:layout_constraintTop_toBottomOf="@id/modelSpinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <!-- GPU Use -->
        <CheckBox
            android:id="@+id/checkboxEnableGPU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_gpu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/modelMemoryText"
            app:layout_constraintBottom_toBottomOf="@id/modelMemoryText" />

        <!-- Select Image Button -->
        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_input_image"
            app:layout_constraintTop_toBottomOf="@id/modelMemoryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" />

        <!-- Input ImageView -->
        <ImageView
            android:id="@+id/inputImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="#DDDDDD"
            android:scaleType="centerCrop"
            android:contentDescription="@string/selected_input_image_preview"
            app:layout_constraintTop_toBottomOf="@id/selectImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Run Inference Button -->
        <Button
            android:id="@+id/runInferenceButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/run_segmentation"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/inputImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Inference Time -->
        <TextView
            android:id="@+id/inferenceTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inference_time"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/runInferenceButton"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Postprocessing Time -->
        <TextView
            android:id="@+id/postprocessingTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postprocessing_time"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@id/inferenceTimeText"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Output Label -->
        <TextView
            android:id="@+id/outputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segmented_output"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/inferenceTimeText"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Output ImageView -->
        <ImageView
            android:id="@+id/outputImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="#EEEEEE"
            android:scaleType="centerCrop"
            android:contentDescription="@string/segmented_output_image"
            app:layout_constraintTop_toBottomOf="@id/outputLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
